2007-03-07 Borut Razem <borut.razem AT siol.net>

	* packages/*: initial check in
	* packages/build.nsis/Makefile: defined ABS_LOCAL_DIR